--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,14 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencias
 node_modules
+
+# Builds
 dist
 dist-ssr
+
+# Archivos locales
 *.local
 
 # Editor directories and files
